<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CurrentJob">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#4D8A4D4D"
        android:backgroundTintMode="add"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="fill_parent"
                android:layout_height="74dp"
                android:layout_weight="1"
                android:background="#6A8A4D4D"
                android:outlineAmbientShadowColor="#1E0404"
                android:paddingTop="20dp"
                android:text="Current Job"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#C9F8F3F3"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/titleID"
                android:layout_width="165dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:hint="Title"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/companyID"
                android:layout_width="165dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:hint="Company"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/locationID"
                android:layout_width="165dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:hint="Location (city, state)"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/costOfLivingID"
                android:layout_width="165dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:hint="Cost of Living Index (e.g. 3)"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/salaryID"
                android:layout_width="165dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:hint="Salary (e.g. 95000)"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/bonusID"
                android:layout_width="165dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:hint="Bonus (e.g. 5000)"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/teleworkDaysID"
                android:layout_width="165dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:hint="Weekly Telework Days"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/leaveID"
                android:layout_width="165dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:hint="Leave Days"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/gymID"
                android:layout_width="165dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:hint="Gym Allowance (e.g. 50)"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="81dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/saveID"
                android:layout_width="145dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:backgroundTint="#6A8A4D4D"
                android:insetLeft="5dp"
                android:insetRight="5dp"
                android:insetBottom="10dp"
                android:onClick="onSave"
                android:text="SAVE"
                tools:ignore="TouchTargetSizeCheck" />

            <Button
                android:id="@+id/cancelID"
                android:layout_width="160dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:backgroundTint="#6A8A4D4D"
                android:insetLeft="5dp"
                android:insetRight="5dp"
                android:insetBottom="10dp"
                android:onClick="onCancel"
                android:text="Cancel and Exit" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>