...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/currentJobActivity"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:backgroundTint="#4D8A4D4D"
                android:insetLeft="10dp"
                android:insetTop="5dp"
                android:insetRight="10dp"
...
